// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assets 1`] = `
"import _fXQovA from './fXQovA.woff';
import _XDOPW from './XDOPW.png';
import _dnIKKh from './dnIKKh.gif';
import _iQCqkl from './iQCqkl.css';

var assets = \`\${_fXQovA}|\${_XDOPW}|\${_dnIKKh}|\${_iQCqkl}\`;

export default assets;
"
`;

exports[`Mixed Assets 1`] = `
"import _fXQovA from './fXQovA.woff';
import _dBNImC from './dBNImC.svg';
import _dnIKKh from './dnIKKh.gif';
import _iQCqkl from './iQCqkl.css';

/* eslint-disable filenames/match-regex */
var assetsMixed = \`\${_fXQovA}|\${_dBNImC}|\${_dnIKKh}|\${_iQCqkl}\`;

export default assetsMixed;
"
`;

exports[`Outside Assets 1`] = `
"import _fXQovA from './fXQovA.woff';
import _XDOPW from './XDOPW.png';
import _dnIKKh from './dnIKKh.gif';
import _iQCqkl from './iQCqkl.css';

/* eslint-disable filenames/match-regex */
var assetsOutside = \`\${_fXQovA}|\${_XDOPW}|\${_dnIKKh}|\${_iQCqkl}\`;

export default assetsOutside;
"
`;
